--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 group 'com.github.chinamima'
-version '1.0'
+version '1.1'
 
+apply plugin: 'maven'
 apply plugin: 'java'
 
 sourceCompatibility = 1.8
